force-app/main/default/objects/Branch__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ארגון</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>