force-app/main/default/objects/Branch__c/fields/Branch_City__c.field-meta.xml
<CustomField>
    <fullName>Branch_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>עיר</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>סניפים</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>