force-app/main/default/objects/Branch__c/fields/Branch_Street__c.field-meta.xml
<CustomField>
    <fullName>Branch_Street__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>רחוב</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Street__c.City__c</field>
            <operation>equals</operation>
            <valueField>$Source.Branch_City__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Street__c</referenceTo>
    <relationshipLabel>סניפים</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>