force-app/main/default/objects/Branch__c/fields/contact_from_request__c.field-meta.xml
<CustomField>
    <fullName>contact_from_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>נא לשייך את איש הקשר מהבקשה לסניף זה</label>
    <type>Checkbox</type>
</CustomField>