force-app/main/default/objects/Branch__c/fields/IsLicenseProvider__c.field-meta.xml
<CustomField>
    <fullName>IsLicenseProvider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ספק רישוי לעיסוק</label>
    <type>Checkbox</type>
</CustomField>