force-app/main/default/objects/Branch__c/fields/No_Accurate_Address__c.field-meta.xml
<CustomField>
    <fullName>No_Accurate_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>אין כתובת מדויקת</label>
    <type>Checkbox</type>
</CustomField>