force-app/main/default/objects/Branch__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>איש קשר עיקרי</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>סניפים</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>