force-app/main/default/objects/Branch__c/validationRules/No_Accurate_Street.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Accurate_Street</fullName>
    <active>true</active>
    <description>אם שדה &quot;אין כתובת מדויקת&quot; אינו מסומן, לא ניתן להזין את שדה רחוב מלל חופשי</description>
    <errorConditionFormula>No_Accurate_Address__c = False &amp;&amp;   Branch_Address__c &lt;&gt;&quot;&quot;</errorConditionFormula>
    <errorDisplayField>No_Accurate_Address__c</errorDisplayField>
    <errorMessage>יש לסמן את השדה אין כתובת מדויקת ולבצע שמירה</errorMessage>
</ValidationRule>